# robot_admin

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/: sequence.md
proto/: game_control.proto
src/: grpc.rs  lib.rs  main.rs  web.rs
static/: index.html  package-lock.json  package.json
static/css/: output.css
static/css/fontawesome/: all.min.css
