[package]
name = "robot_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
prost = "0.12"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio-stream = "0.1"
tower = "0.4"
chrono = "0.4"
futures = "0.3"

[build-dependencies]
tonic-build = "0.10"
